--- a/src/pug/common-blocks/footer.pug
+++ b/src/pug/common-blocks/footer.pug
@@ -13,4 +13,4 @@ mixin footer()
 		.footer__col.footer__col--right
 			p ИНН 230114835738
 			a.footer__grey-link(href="#", target="blank", rel="noreferrer noopener") Политика конфиденциальности
-			p Все права защищены © 2023
+			p.footer__copyright Все права защищены © 2023
