--- a/src/scss/components/_list-audience.scss
+++ b/src/scss/components/_list-audience.scss
@@ -1,11 +1,24 @@
 .list-audience {
 	display: flex;
-	flex-wrap: wrap;
 	margin: 0 -4px;
+
+	@include tablet {
+		justify-content: center;
+	}
+
+	@include desktop {
+		justify-content: flex-start;
+	}
 
 	&__elem {
 		position: relative;
 		margin: 0 4px;
+
+		&--hide-mobile {
+			@media (max-width: 500px) {
+				display: none;
+			}
+		}
 	}
 
 	&__img {
