--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,9 +1,13 @@
 body {
 	font-family: var(--font-primary);
-	font-size: 18px;
+	font-size: 15px;
 	line-height: 1.4;
 	-webkit-font-smoothing: antialiased;
 	color: var(--color-black);
+
+	@include desktop {
+		font-size: 18px;
+	}
 }
 
 input, button, textarea {
@@ -20,16 +24,24 @@ strong {
 
 .heading1 {
 	font-family: var(--font-secondary);
-	font-size: 64px;
+	font-size: 38px;
 	line-height: 1.1;
 	font-weight: 500;
 	letter-spacing: -.02em;
+
+	@include desktop {
+		font-size: 64px;
+	}
 }
 
 .heading2 {
 	font-family: var(--font-secondary);
-	font-size: 50px;
+	font-size: 30px;
 	line-height: 1;
 	font-weight: 500;
 	letter-spacing: -.028em;
+
+	@include desktop {
+		font-size: 50px;
+	}
 }
