--- a/src/scss/components/_advantage.scss
+++ b/src/scss/components/_advantage.scss
@@ -1,15 +1,25 @@
 .advantage {
 	&__icon {
-		width: 56px;
-		height: 56px;
+		width: 40px;
+		height: 40px;
 		margin-bottom: 6px;
+
+		@include desktop {
+			width: 56px;
+			height: 56px;
+			margin-bottom: 6px;
+		}
 	}
 
 	&__title {
 		margin-bottom: 12px;
-		font-size: 22px;
+		font-size: 20px;
 		line-height: 1.2;
 		font-weight: 500;
+
+		@include desktop {
+			font-size: 22px;
+		}
 	}
 
 	&__text {
