--- a/src/scss/components/_blockquote.scss
+++ b/src/scss/components/_blockquote.scss
@@ -1,15 +1,15 @@
 .blockquote {
 	position: relative;
 	z-index: 0;
-	margin-top: 24px;
-	font-size: 20px;
+	margin-top: 30px;
+	font-size: 17px;
 	line-height: 1.4;
-	padding: 15px 20px 6px 4px;
+	padding: 20px 16px 16px 10px;
 
 	&:before {
 		position: absolute;
-		top: -24px;
-		right: 13px;
+		top: -30px;
+		right: 0;
 		width: 32px;
 		height: 32px;
 		background-image: url("../images/icons/quote.svg");
@@ -23,7 +23,7 @@
 		position: absolute;
 		z-index: -1;
 		top: 0;
-		left: -11px;
+		left: -7px;
 		width: 100%;
 		height: 100%;
 		border-radius: 16px;
@@ -33,17 +33,50 @@
 		content: "";
 	}
 
-	&--yellow {
-		margin-top: 0;
-		padding: 20px 20px 6px 2px;
+	@include tablet {
+		margin-top: 24px;
+		padding: 24px 64px 14px 8px;
 
 		&::before {
-			top: -8px;
-			left: -13px;
+			top: -24px;
+			right: 13px;
+		}
+	}
+
+	@include desktop {
+		font-size: 20px;
+		padding: 15px 20px 6px 4px;
+
+		&::after {
+			left: -11px;
+		}
+	}
+
+	&--yellow {
+		margin-top: 0;
+		padding: 24px 16px 10px 8px;
+
+		&::before {
+			top: -9px;
+			left: -7px;
 			right: unset;
 		}
+
 		&::after {
 			background-color: #F9ECD3;
+		}
+
+		@include tablet {
+			padding: 28px 80px 10px 8px;
+
+			&::before {
+				top: -8px;
+				left: -13px;
+			}
+		}
+
+		@include desktop {
+			padding: 20px 20px 6px 2px;
 		}
 	}
 
@@ -56,23 +89,32 @@
 		&::before {
 			position: absolute;
 			z-index: 1;
-			top: 5px;
+			top: 0;
 			left: 0;
-			bottom: 5px;
+			bottom: -3px;
 			width: 4px;
 			background-color: var(--color-black);
 			border-radius: 8px;
 			content: "";
 		}
 
+		@include desktop {
+			&::before {
+				top: 5px;
+				bottom: 5px;
+			}
+		}
+
 		.blockquote--yellow & {
 			&::before {
-				top: 8px;
+				top: 3px;
+				bottom: 0;
 			}
+
 			&::after {
 				position: absolute;
-				bottom: 0;
-				right: 36px;
+				bottom: -8px;
+				right: -24px;
 				transform: translateY(63%);
 				width: 136px;
 				height: 60px;
@@ -81,6 +123,28 @@
 				background-position: center;
 				background-repeat: no-repeat;
 				content: "";
+			}
+
+			@include tablet {
+				&::before {
+				}
+
+				&::after {
+					bottom: 7px;
+					right: -114px;
+				}
+			}
+
+			@include desktop {
+				&::before {
+					top: 8px;
+					bottom: 5px;
+				}
+
+				&::after {
+					bottom: 0;
+					right: 36px;
+				}
 			}
 		}
 	}
