--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -33,13 +33,18 @@
 		padding: 13px 20px;
 		border: 1px solid var(--color-black);
 		border-radius: 70px;
-		font-size: 15px;
-		line-height: 18px;
+		font-size: 17px;
+		line-height: 20px;
 		color: var(--color-black);
 
 		&:hover {
 			background-color: var(--color-black);
 			color: var(--color-white);
+		}
+
+		@include desktop {
+			font-size: 15px;
+			line-height: 18px;
 		}
 	}
 
