--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,21 +1,41 @@
 .footer {
 	display: flex;
 	justify-content: space-between;
-	padding-top: 16px;
-	padding-bottom: 100px;
+	padding-top: 21px;
+	padding-bottom: 10px;
 	border-top: 1px solid var(--color-black-op10);
 	color: var(--color-black-op50);
 
+	@include desktop {
+		padding-top: 16px;
+		padding-bottom: 100px;
+	}
+
 	&__col {
 		display: flex;
-		align-items: center;
+		flex-direction: column;
+
+		@include desktop {
+			flex-direction: row;
+			align-items: center;
+		}
 
 		&--left {
-			font-size: 15px;
-			line-height: 18px;
+			font-size: 14px;
+			line-height: 17px;
+
+			@include desktop-xl {
+				font-size: 15px;
+				line-height: 18px;
+			}
 
 			& > * {
-				margin-right: 12px;
+				margin-bottom: 16px;
+
+				@include desktop {
+					margin-right: 12px;
+					margin-bottom: 0;
+				}
 			}
 		}
 
@@ -24,13 +44,28 @@
 			line-height: 14px;
 
 			& > * {
-				margin-left: 16px;
+				margin-bottom: 8px;
+
+				@include desktop {
+					margin-bottom: 0;
+					margin-left: 16px;
+				}
 			}
+
 		}
 	}
 
 	&__logo {
-		margin: 0 40px 0 0;
+		max-width: 110px;
+		margin-bottom: 16px;
+
+		@include desktop {
+			margin: 0 40px 0 0;
+		}
+
+		@include desktop-xl {
+			max-width: 165px;
+		}
 	}
 
 	&__link {
@@ -47,6 +82,15 @@
 		&:hover {
 			color: var(--color-black);
 			text-decoration: underline;
+		}
+	}
+
+	&__copyright {
+		@include desktop {
+			display: none;
+		}
+		@include desktop-xl {
+			display: block;
 		}
 	}
 }
