--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -1,10 +1,20 @@
 .container {
 	width: 100%;
 	max-width: 1460px;
-	padding-left: 32px;
-	padding-right: 32px;
+	padding-left: 16px;
+	padding-right: 16px;
 	margin-left: auto;
 	margin-right: auto;
+
+	@include tablet {
+		padding-left: 48px;
+		padding-right: 48px;
+	}
+
+	@include desktop {
+		padding-left: 32px;
+		padding-right: 32px;
+	}
 
 	&--fluid {
 		max-width: 100%;
