--- a/src/scss/variables/_breakpoints.scss
+++ b/src/scss/variables/_breakpoints.scss
@@ -1,6 +1,19 @@
+$breakpoint-desktop-xxl: 1920px;
+$breakpoint-desktop-xl: 1440px;
 $breakpoint-desktop: 1024px;
 $breakpoint-tablet: 768px;
-$breakpoint-mobile: 564px;
+
+@mixin desktop-xxl {
+	@media (min-width: $breakpoint-desktop-xxl) {
+		@content;
+	}
+}
+
+@mixin desktop-xl {
+	@media (min-width: $breakpoint-desktop-xl) {
+		@content;
+	}
+}
 
 @mixin desktop {
 	@media (min-width: $breakpoint-desktop) {
@@ -9,19 +22,13 @@ $breakpoint-mobile: 564px;
 }
 
 @mixin tablet {
-	@media (min-width: $breakpoint-tablet) and (max-width: $breakpoint-desktop) {
+	@media (min-width: $breakpoint-tablet) {
 		@content;
 	}
 }
 
 @mixin mobile {
 	@media (max-width: $breakpoint-tablet) {
-		@content;
-	}
-}
-
-@mixin tablet-desktop {
-	@media (min-width: $breakpoint-tablet) {
 		@content;
 	}
 }
