--- a/css/main.css
+++ b/css/main.css
@@ -863,12 +863,13 @@ img {
 .section {
   padding-top: 56px;
   padding-bottom: 56px;
-  max-width: 700px;
   margin-left: auto;
   margin-right: auto; }
+  @media (max-width: 1024px) {
+    .section {
+      max-width: 700px; } }
   @media (min-width: 1024px) {
     .section {
-      max-width: unset;
       padding-top: 64px;
       padding-bottom: 64px; } }
   .section__content {
