feat: complete adaptive, fiexes, optimisation

--- a/src/index.pug
+++ b/src/index.pug
@@ -4,7 +4,8 @@ prepend vars
 	//-
 
 append vars
-	- title = "Main page"
+	- title = "Soloteam"
+	- meta.description = "Soloteam description"
 
 block content
 	// Section Hero
@@ -56,7 +57,8 @@ block content
 						|
 						i которая обновляется сама
 					blockquote.blockquote.blockquote--yellow.section__blockquote
-						span.blockquote__text Обычно, база фрилансеров это список в Notion или Exel, сˆкучей неактуальных данных. Приходится писать сразу всем.
+						span.blockquote__text Обычно, база фрилансеров это список в Notion или Exel, с кучей неактуальных данных. Приходится писать сразу всем.
+							span.blockquote__arrow-box
 					p.section__text В Soloteam — все данные обновляются автоматически: ставка в час, грейд и занятость фрилансера. Вы заранее понимаете кому предложить задачу.
 			.row__elem
 				+picture("screen1")(class="section__image")
