--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -37,6 +37,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Antonym';
 	src: url('../fonts/antonym/antonym-light-italic.eot');
 	src: local('Antonym Light Italic'), local('Antonym-LightItalic'),
@@ -49,6 +50,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Antonym';
 	src: url('../fonts/antonym/antonym-medium.eot');
 	src:
