--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -5,6 +5,9 @@
 	--color-black-op50: rgba(0,0,0,.5);
 	--color-black-op10: rgba(0,0,0,.1);
 	--color-black-op08: rgba(0,0,0,.08);
+	--color-black-op05: rgba(0,0,0,.05);
 	--color-bg: #FDFCF7;
 	--color-block-bg: #FAFB85;
+	--color-blockquote-yellow-bg: #F9ECD3;
+	--color-blockquote-grey-bg: #F4F4F1;
 }
