--- a/src/scss/base/_app.scss
+++ b/src/scss/base/_app.scss
@@ -11,6 +11,13 @@ body {
 	min-width: 375px;
 	min-height: 100vh;
 	overflow-x: hidden;
+
+	&.is-locked {
+		position: relative;
+		overflow: hidden;
+		touch-action: none;
+		-ms-touch-action: none;
+	}
 }
 
 .main {
