--- a/src/scss/components/_blockquote.scss
+++ b/src/scss/components/_blockquote.scss
@@ -27,8 +27,8 @@
 		width: 100%;
 		height: 100%;
 		border-radius: 16px;
-		background-color: #F4F4F1;
-		border: 1px solid rgba(#000, .05);
+		background-color: var(--color-blockquote-grey-bg);
+		border: 1px solid var(--color-black-op05);
 		transform: rotate(-2deg);
 		content: "";
 	}
@@ -63,7 +63,7 @@
 		}
 
 		&::after {
-			background-color: #F9ECD3;
+			background-color: var(--color-blockquote-yellow-bg);
 		}
 
 		@include tablet {
@@ -111,27 +111,8 @@
 				bottom: 0;
 			}
 
-			&::after {
-				position: absolute;
-				bottom: -8px;
-				right: -24px;
-				transform: translateY(63%);
-				width: 136px;
-				height: 60px;
-				background-image: url("../images/icons/drawing-arrow.svg");
-				background-size: contain;
-				background-position: center;
-				background-repeat: no-repeat;
-				content: "";
-			}
-
 			@include tablet {
 				&::before {
-				}
-
-				&::after {
-					bottom: 7px;
-					right: -114px;
 				}
 			}
 
@@ -140,11 +121,37 @@
 					top: 8px;
 					bottom: 5px;
 				}
+			}
+		}
+	}
 
-				&::after {
-					bottom: 0;
-					right: 36px;
-				}
+	&__arrow-box {
+		&::after {
+			position: absolute;
+			bottom: -37px;
+			right: -26px;
+			width: 136px;
+			height: 60px;
+			background-image: url("../images/icons/drawing-arrow.svg");
+			background-size: contain;
+			background-position: center;
+			background-repeat: no-repeat;
+			content: "";
+		}
+
+		@include tablet {
+			&::after {
+				bottom: 7px;
+				right: -114px;
+				transform: translateY(63%);}
+		}
+
+		@include desktop {
+			position: relative;
+			&::after {
+				bottom: -4px;
+				left: 10px;
+				right: unset;
 			}
 		}
 	}
