--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -9,6 +9,11 @@
 	padding-top: 12px;
 	padding-bottom: 12px;
 	background-color: var(--color-block-bg);
+	transition: background-color $transition-default;
+
+	&--menu {
+		background-color: var(--color-white);
+	}
 
 	&__logo {
 		max-width: 110px;
@@ -23,9 +28,10 @@
 
 		@include desktop {
 			display: block;
+			padding: 0 30px;
 		}
 
-		@include desktop-xxl {
+		@include desktop-xl {
 			padding: 0 40px;
 		}
 	}
@@ -85,12 +91,56 @@
 
 	&__button-box {
 		display: flex;
+		align-items: center;
 		margin-left: auto;
 	}
 
 	&__button {
 		&:not(:last-child) {
 			margin-right: 10px;
+		}
+
+		&--login {
+			display: none;
+
+			@include desktop {
+				display: inline-flex;
+			}
+		}
+	}
+
+	&__menu-btn {
+		position: relative;
+		width: 44px;
+		height: 44px;
+		border: none;
+		background-color: transparent;
+	}
+
+	&__menu-btn-icon {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		transition: opacity $transition-default;
+
+		@include desktop {
+			display: none;
+		}
+
+		&--burger {
+			.header--menu & {
+				opacity: 0;
+			}
+		}
+
+		&--close {
+			opacity: 0;
+
+			.header--menu & {
+				opacity: 1;
+			}
 		}
 	}
 }
