--- a/src/scss/components/_section-offer.scss
+++ b/src/scss/components/_section-offer.scss
@@ -61,25 +61,30 @@
 			left: 0;
 			max-width: 351px;
 
-			@include tablet {
-				max-width: 52.6%;}
-
 			@include desktop {
-				max-width: 36.6%;
+				max-width: 395px;
+			}
+
+			@include desktop-xl {
+				max-width: 510px;
 			}
 		}
 
 		&--right {
 			display: none;
 			right: 0;
-			max-width: 45.3%;
+			max-width: 302px;
 
 			@include tablet {
 				display: block;
 			}
 
 			@include desktop {
-				max-width: 31.3%;
+				max-width: 395px;
+			}
+
+			@include desktop-xl {
+				max-width: 473px;
 			}
 		}
 	}
